src/objects/Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Account_A__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account A</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>There are some relationships which have Inactive Agencies attached to this Account. Please identify them and correct as necessary.</errorMessage>
            <filterItems>
                <field>Account.IsActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationships (Outgoing)</relationshipLabel>
        <relationshipName>Account_Account_rel_A</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_B__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account B</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>There are some relationships which have Inactive Agencies attached to this Account. Please identify them and correct as necessary.</errorMessage>
            <filterItems>
                <field>Account.IsActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationships (Incoming)</relationshipLabel>
        <relationshipName>Account_Account_rel_B</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agencyname__c</fullName>
        <formula>Account_A__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agencyname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Link__c</fullName>
        <formula>HYPERLINK(Id,   Account_B__r.Name &amp;&quot; &lt;&lt; &gt;&gt; &quot;&amp;  Account_A__r.Name,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booking/Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsorship</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visibility__c</fullName>
        <label>Visibility</label>
        <picklist>
            <picklistValues>
                <fullName>Group - read/write</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Group - read only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Relationship</label>
    <nameField>
        <label>Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Validate_Billing_Agency_Type</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Role__c,&apos;Billing&apos;) &amp;&amp;  Not(ISPICKVAL(Account_A__r.Type,&apos;Billing Agency&apos;))</errorConditionFormula>
        <errorDisplayField>Role__c</errorDisplayField>
        <errorMessage>This agency is not of type Billing so cant be set up as billing relationship.</errorMessage>
    </validationRules>
</CustomObject>